# ReviewPilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
docs/: design.md  prompts.md  session-handoff.md  slides.md
examples/: pr_cross_file_refactor.json  pr_security_risk.json  pr_simple_bugfix.json
reviewpilot/: __init__.py  __main__.py  cli.py  config.py  db.py  language.py  logging_config.py  main.py  markdown.py  render.py  review_service.py
reviewpilot/analyzer/: __init__.py  line_review.py  llm.py  risk.py  schemas.py  summary.py
reviewpilot/analyzer/prompts/: line_review.j2  risk.j2  summary.j2
reviewpilot/api/: auth.py  feedback.py  review.py
reviewpilot/auth/: github_oauth.py  session.py
reviewpilot/context/: __init__.py  ast_graph.py  builder.py  diff.py  files.py
reviewpilot/fetcher/: __init__.py  git_local.py  github_api.py
reviewpilot/post/: __init__.py  confidence.py  merge.py  report.py  sort.py
reviewpilot/static/css/: output.css
reviewpilot/static/js/: htmx-sse.js
reviewpilot/templates/: base.html  index.html  review.html
reviewpilot/templates/partials/: inline_review.html  risk_card.html  summary.html
reviewpilot/validator/: __init__.py  ruff_runner.py  semgrep_runner.py
tests/: conftest.py  test_ast_graph.py  test_auth_api.py  test_builder.py  test_diff.py  test_feedback_api.py  test_files.py  test_git_local.py  test_github_api.py  test_line_review.py  test_llm.py  test_markdown.py  test_post.py  test_prompts.py  test_review_api.py  test_review_service.py  test_risk.py  test_ruff_runner.py  test_summary.py
